// Vitest Snapshot v1

exports[`computes station oee > station minutes for last week 1`] = `
Map {
  "L/U #1" => 12,
  "MC #1" => 50,
  "L/U #2" => 6,
}
`;

exports[`creates cycles clipboard table > cycle clipboard table 1`] = `
<div>
  <table>
    

    <thead>
      <tr>
        <th>
          Date
        </th>
        <th>
          Part
        </th>
        <th>
          Station
        </th>
        <th>
          Pallet
        </th>
        <th>
          Serial
        </th>
        <th>
          Workorder
        </th>
        <th>
          Inspection
        </th>
        <th>
          Elapsed Min
        </th>
        <th>
          Target Min
        </th>
        <th>
          Median Elapsed Min
        </th>
        <th>
          Median Deviation
        </th>
      </tr>
    </thead>
    

    <tbody>
      

      <tr>
        <td>
          Mar 4, 2018, 9:05 AM
        </td>
        <td>
          partk-3
        </td>
        <td>
          L/U #1
        </td>
        <td>
          pali
        </td>
        <td>
          serialo
        </td>
        <td>
          workw
        </td>
        <td>
          Insp1[success]
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
        <td>
          0.3
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:28 AM
        </td>
        <td>
          partk-3
        </td>
        <td>
          MC #1
        </td>
        <td>
          pali
        </td>
        <td>
          serialo
        </td>
        <td>
          workw
        </td>
        <td>
          Insp1[success]
        </td>
        <td>
          15.0
        </td>
        <td>
          15.0
        </td>
        <td>
          15.0
        </td>
        <td>
          0.3
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:38 AM
        </td>
        <td>
          partk-3
        </td>
        <td>
          L/U #2
        </td>
        <td>
          pali
        </td>
        <td>
          serialo
        </td>
        <td>
          workw
        </td>
        <td>
          Insp1[success]
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
        <td>
          0.3
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:05 PM
        </td>
        <td>
          partm-2
        </td>
        <td>
          L/U #1
        </td>
        <td>
          palc
        </td>
        <td>
          serialf
        </td>
        <td>
          workv
        </td>
        <td>
          Insp1[success]
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
        <td>
          0.3
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:33 PM
        </td>
        <td>
          partm-2
        </td>
        <td>
          MC #1
        </td>
        <td>
          palc
        </td>
        <td>
          serialf
        </td>
        <td>
          workv
        </td>
        <td>
          Insp1[success]
        </td>
        <td>
          20.0
        </td>
        <td>
          20.0
        </td>
        <td>
          20.0
        </td>
        <td>
          0.3
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:43 PM
        </td>
        <td>
          partm-2
        </td>
        <td>
          L/U #2
        </td>
        <td>
          palc
        </td>
        <td>
          serialf
        </td>
        <td>
          workv
        </td>
        <td>
          Insp1[success]
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
        <td>
          0.3
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 5, 2018, 12:05 AM
        </td>
        <td>
          part4-1
        </td>
        <td>
          L/U #1
        </td>
        <td>
          palp
        </td>
        <td>
          serialt
        </td>
        <td>
          work5
        </td>
        <td>
          Insp1[success]
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
        <td>
          0.3
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 5, 2018, 12:43 AM
        </td>
        <td>
          part4-1
        </td>
        <td>
          MC #1
        </td>
        <td>
          palp
        </td>
        <td>
          serialt
        </td>
        <td>
          work5
        </td>
        <td>
          Insp1[success]
        </td>
        <td>
          30.0
        </td>
        <td>
          30.0
        </td>
        <td>
          30.0
        </td>
        <td>
          0.3
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 5, 2018, 12:53 AM
        </td>
        <td>
          part4-1
        </td>
        <td>
          L/U #2
        </td>
        <td>
          palp
        </td>
        <td>
          serialt
        </td>
        <td>
          work5
        </td>
        <td>
          Insp1[success]
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
        <td>
          0.3
        </td>
      </tr>
      

    </tbody>
    

  </table>
</div>
`;

exports[`creates cycles clipboard table > cycle filtered clipboard table 1`] = `
<div>
  <table>
    

    <thead>
      <tr>
        <th>
          Date
        </th>
        <th>
          Part
        </th>
        <th>
          Station
        </th>
        <th>
          Pallet
        </th>
        <th>
          Serial
        </th>
        <th>
          Workorder
        </th>
        <th>
          Inspection
        </th>
        <th>
          Elapsed Min
        </th>
        <th>
          Target Min
        </th>
        <th>
          Median Elapsed Min
        </th>
        <th>
          Median Deviation
        </th>
      </tr>
    </thead>
    

    <tbody>
      

      <tr>
        <td>
          Mar 4, 2018, 9:05 PM
        </td>
        <td>
          partm-2
        </td>
        <td>
          L/U #1
        </td>
        <td>
          palc
        </td>
        <td>
          serialf
        </td>
        <td>
          workv
        </td>
        <td>
          Insp1[success]
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
        <td>
          0.3
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:33 PM
        </td>
        <td>
          partm-2
        </td>
        <td>
          MC #1
        </td>
        <td>
          palc
        </td>
        <td>
          serialf
        </td>
        <td>
          workv
        </td>
        <td>
          Insp1[success]
        </td>
        <td>
          20.0
        </td>
        <td>
          20.0
        </td>
        <td>
          20.0
        </td>
        <td>
          0.3
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:43 PM
        </td>
        <td>
          partm-2
        </td>
        <td>
          L/U #2
        </td>
        <td>
          palc
        </td>
        <td>
          serialf
        </td>
        <td>
          workv
        </td>
        <td>
          Insp1[success]
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
        <td>
          0.3
        </td>
      </tr>
      

    </tbody>
    

  </table>
</div>
`;

exports[`creates cycles clipboard table > filtered cycles 1`] = `
{
  "allLoadStationNames": [
    "L/U #1",
    "L/U #2",
  ],
  "allMachineNames": [
    "MC #1",
  ],
  "allMachineOperations": [],
  "allPalletNames": [
    "palc",
    "pali",
    "palp",
  ],
  "allPartAndProcNames": [
    {
      "part": "part4",
      "proc": 1,
    },
    {
      "part": "partk",
      "proc": 3,
    },
    {
      "part": "partm",
      "proc": 2,
    },
  ],
  "data": Map {
    "L/U #1" => [
      {
        "MAD_aboveMinutes": 0.25,
        "activeMinutes": 6,
        "cntr": 100,
        "isLabor": true,
        "material": [
          {
            "face": "facez",
            "id": 50337,
            "numproc": 0,
            "part": "part4",
            "proc": 1,
            "serial": "serialt",
            "uniq": "uniqu",
            "workorder": "work5",
          },
        ],
        "medianCycleMinutes": 6,
        "operation": "LOAD",
        "operator": "",
        "pallet": "palp",
        "part": "part4",
        "process": 1,
        "stationGroup": "L/U",
        "stationNumber": 1,
        "x": 2018-03-05T06:05:00.000Z,
        "y": 6,
      },
      {
        "MAD_aboveMinutes": 0.25,
        "activeMinutes": 6,
        "cntr": 200,
        "isLabor": true,
        "material": [
          {
            "face": "facet",
            "id": 86489,
            "numproc": 4,
            "part": "partm",
            "proc": 2,
            "serial": "serialf",
            "uniq": "uniqh",
            "workorder": "workv",
          },
        ],
        "medianCycleMinutes": 6,
        "operation": "LOAD",
        "operator": "",
        "pallet": "palc",
        "part": "partm",
        "process": 2,
        "stationGroup": "L/U",
        "stationNumber": 1,
        "x": 2018-03-05T03:05:00.000Z,
        "y": 6,
      },
      {
        "MAD_aboveMinutes": 0.25,
        "activeMinutes": 6,
        "cntr": 300,
        "isLabor": true,
        "material": [
          {
            "face": "face8",
            "id": 20089,
            "numproc": 4,
            "part": "partk",
            "proc": 3,
            "serial": "serialo",
            "uniq": "uniqw",
            "workorder": "workw",
          },
        ],
        "medianCycleMinutes": 6,
        "operation": "LOAD",
        "operator": "",
        "pallet": "pali",
        "part": "partk",
        "process": 3,
        "stationGroup": "L/U",
        "stationNumber": 1,
        "x": 2018-03-04T15:05:00.000Z,
        "y": 6,
      },
    ],
    "MC #1" => [
      {
        "MAD_aboveMinutes": 0.25,
        "activeMinutes": 30,
        "cntr": 104,
        "isLabor": false,
        "material": [
          {
            "face": "facez",
            "id": 50337,
            "numproc": 0,
            "part": "part4",
            "proc": 1,
            "serial": "serialt",
            "uniq": "uniqu",
            "workorder": "work5",
          },
        ],
        "medianCycleMinutes": 30,
        "operation": "progv",
        "operator": "",
        "pallet": "palp",
        "part": "part4",
        "process": 1,
        "stationGroup": "MC",
        "stationNumber": 1,
        "x": 2018-03-05T06:43:00.000Z,
        "y": 30,
      },
      {
        "MAD_aboveMinutes": 0.25,
        "activeMinutes": 20,
        "cntr": 204,
        "isLabor": false,
        "material": [
          {
            "face": "facet",
            "id": 86489,
            "numproc": 4,
            "part": "partm",
            "proc": 2,
            "serial": "serialf",
            "uniq": "uniqh",
            "workorder": "workv",
          },
        ],
        "medianCycleMinutes": 20,
        "operation": "progm",
        "operator": "",
        "pallet": "palc",
        "part": "partm",
        "process": 2,
        "stationGroup": "MC",
        "stationNumber": 1,
        "x": 2018-03-05T03:33:00.000Z,
        "y": 20,
      },
      {
        "MAD_aboveMinutes": 0.25,
        "activeMinutes": 15,
        "cntr": 304,
        "isLabor": false,
        "material": [
          {
            "face": "face8",
            "id": 20089,
            "numproc": 4,
            "part": "partk",
            "proc": 3,
            "serial": "serialo",
            "uniq": "uniqw",
            "workorder": "workw",
          },
        ],
        "medianCycleMinutes": 15,
        "operation": "prog9",
        "operator": "",
        "pallet": "pali",
        "part": "partk",
        "process": 3,
        "stationGroup": "MC",
        "stationNumber": 1,
        "x": 2018-03-04T15:28:00.000Z,
        "y": 15,
      },
    ],
    "L/U #2" => [
      {
        "MAD_aboveMinutes": 0.25,
        "activeMinutes": 3,
        "cntr": 106,
        "isLabor": true,
        "material": [
          {
            "face": "facez",
            "id": 50337,
            "numproc": 0,
            "part": "part4",
            "proc": 1,
            "serial": "serialt",
            "uniq": "uniqu",
            "workorder": "work5",
          },
        ],
        "medianCycleMinutes": 3,
        "operation": "UNLOAD",
        "operator": "",
        "pallet": "palp",
        "part": "part4",
        "process": 1,
        "stationGroup": "L/U",
        "stationNumber": 2,
        "x": 2018-03-05T06:53:00.000Z,
        "y": 3,
      },
      {
        "MAD_aboveMinutes": 0.25,
        "activeMinutes": 3,
        "cntr": 206,
        "isLabor": true,
        "material": [
          {
            "face": "facet",
            "id": 86489,
            "numproc": 4,
            "part": "partm",
            "proc": 2,
            "serial": "serialf",
            "uniq": "uniqh",
            "workorder": "workv",
          },
        ],
        "medianCycleMinutes": 3,
        "operation": "UNLOAD",
        "operator": "",
        "pallet": "palc",
        "part": "partm",
        "process": 2,
        "stationGroup": "L/U",
        "stationNumber": 2,
        "x": 2018-03-05T03:43:00.000Z,
        "y": 3,
      },
      {
        "MAD_aboveMinutes": 0.25,
        "activeMinutes": 3,
        "cntr": 306,
        "isLabor": true,
        "material": [
          {
            "face": "face8",
            "id": 20089,
            "numproc": 4,
            "part": "partk",
            "proc": 3,
            "serial": "serialo",
            "uniq": "uniqw",
            "workorder": "workw",
          },
        ],
        "medianCycleMinutes": 3,
        "operation": "UNLOAD",
        "operator": "",
        "pallet": "pali",
        "part": "partk",
        "process": 3,
        "stationGroup": "L/U",
        "stationNumber": 2,
        "x": 2018-03-04T15:38:00.000Z,
        "y": 3,
      },
    ],
  },
  "seriesLabel": "Station",
}
`;

exports[`creates log entries clipboard table > events clipboard table 1`] = `
<div>
  <table>
    

    <thead>
      <tr>
        <th>
          Date
        </th>
        <th>
          Part
        </th>
        <th>
          Station
        </th>
        <th>
          Pallet
        </th>
        <th>
          Serial
        </th>
        <th>
          Workorder
        </th>
        <th>
          Result
        </th>
        <th>
          Elapsed Min
        </th>
        <th>
          Active Min
        </th>
      </tr>
    </thead>
    

    <tbody>
      

      <tr>
        <td>
          Mar 5, 2018, 12:05 AM
        </td>
        <td>
          parti-3
        </td>
        <td>
          L/U #1
        </td>
        <td>
          palo
        </td>
        <td>
          serialr
        </td>
        <td>
          work3
        </td>
        <td>
          LOAD
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 5, 2018, 12:10 AM
        </td>
        <td>
          parti-3
        </td>
        <td>
          Stocker
        </td>
        <td>
          palo
        </td>
        <td>
          serialr
        </td>
        <td>
          work3
        </td>
        <td />
        <td>
          4.0
        </td>
        <td>
          0.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 5, 2018, 12:43 AM
        </td>
        <td>
          parti-3
        </td>
        <td>
          MC #1
        </td>
        <td>
          palo
        </td>
        <td>
          serialr
        </td>
        <td>
          work3
        </td>
        <td>
          progy
        </td>
        <td>
          30.0
        </td>
        <td>
          30.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 5, 2018, 12:53 AM
        </td>
        <td>
          parti-3
        </td>
        <td>
          L/U #2
        </td>
        <td>
          palo
        </td>
        <td>
          serialr
        </td>
        <td>
          work3
        </td>
        <td>
          UNLOAD
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 5, 2018, 12:58 AM
        </td>
        <td>
          parti-3
        </td>
        <td>
          Signal Insp1
        </td>
        <td />
        <td>
          serialr
        </td>
        <td>
          work3
        </td>
        <td>
          True
        </td>
        <td>
          0.0
        </td>
        <td>
          0.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 5, 2018, 12:58 AM
        </td>
        <td>
          parti-3
        </td>
        <td>
          Signal Insp1
        </td>
        <td />
        <td>
          serialr
        </td>
        <td>
          work3
        </td>
        <td>
          True
        </td>
        <td>
          0.0
        </td>
        <td>
          0.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 5, 2018, 1:05 AM
        </td>
        <td>
          parti-3
        </td>
        <td>
          Inspect Insp1
        </td>
        <td />
        <td>
          serialr
        </td>
        <td>
          work3
        </td>
        <td>
          Succeeded
        </td>
        <td>
          0.0
        </td>
        <td>
          0.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:05 PM
        </td>
        <td>
          partl-1
        </td>
        <td>
          L/U #1
        </td>
        <td>
          palv
        </td>
        <td>
          serialw
        </td>
        <td>
          workj
        </td>
        <td>
          LOAD
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:10 PM
        </td>
        <td>
          partl-1
        </td>
        <td>
          Stocker
        </td>
        <td>
          palv
        </td>
        <td>
          serialw
        </td>
        <td>
          workj
        </td>
        <td />
        <td>
          4.0
        </td>
        <td>
          0.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:33 PM
        </td>
        <td>
          partl-1
        </td>
        <td>
          MC #1
        </td>
        <td>
          palv
        </td>
        <td>
          serialw
        </td>
        <td>
          workj
        </td>
        <td>
          progz
        </td>
        <td>
          20.0
        </td>
        <td>
          20.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:43 PM
        </td>
        <td>
          partl-1
        </td>
        <td>
          L/U #2
        </td>
        <td>
          palv
        </td>
        <td>
          serialw
        </td>
        <td>
          workj
        </td>
        <td>
          UNLOAD
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:48 PM
        </td>
        <td>
          partl-1
        </td>
        <td>
          Signal Insp1
        </td>
        <td />
        <td>
          serialw
        </td>
        <td>
          workj
        </td>
        <td>
          True
        </td>
        <td>
          0.0
        </td>
        <td>
          0.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:55 PM
        </td>
        <td>
          partl-1
        </td>
        <td>
          Inspect Insp1
        </td>
        <td />
        <td>
          serialw
        </td>
        <td>
          workj
        </td>
        <td>
          Succeeded
        </td>
        <td>
          0.0
        </td>
        <td>
          0.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:05 AM
        </td>
        <td>
          partr-4
        </td>
        <td>
          L/U #1
        </td>
        <td>
          pal2
        </td>
        <td>
          seriald
        </td>
        <td>
          workz
        </td>
        <td>
          LOAD
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:10 AM
        </td>
        <td>
          partr-4
        </td>
        <td>
          Stocker
        </td>
        <td>
          pal2
        </td>
        <td>
          seriald
        </td>
        <td>
          workz
        </td>
        <td />
        <td>
          4.0
        </td>
        <td>
          0.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:28 AM
        </td>
        <td>
          partr-4
        </td>
        <td>
          MC #1
        </td>
        <td>
          pal2
        </td>
        <td>
          seriald
        </td>
        <td>
          workz
        </td>
        <td>
          progn
        </td>
        <td>
          15.0
        </td>
        <td>
          15.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:38 AM
        </td>
        <td>
          partr-4
        </td>
        <td>
          L/U #2
        </td>
        <td>
          pal2
        </td>
        <td>
          seriald
        </td>
        <td>
          workz
        </td>
        <td>
          UNLOAD
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:43 AM
        </td>
        <td>
          partr-4
        </td>
        <td>
          Signal Insp1
        </td>
        <td />
        <td>
          seriald
        </td>
        <td>
          workz
        </td>
        <td>
          True
        </td>
        <td>
          0.0
        </td>
        <td>
          0.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:50 AM
        </td>
        <td>
          partr-4
        </td>
        <td>
          Inspect Insp1
        </td>
        <td />
        <td>
          seriald
        </td>
        <td>
          workz
        </td>
        <td>
          Succeeded
        </td>
        <td>
          0.0
        </td>
        <td>
          0.0
        </td>
      </tr>
      

    </tbody>
    

  </table>
</div>
`;
